--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,11 @@ name: Build and push to Docker Hub
 on:
   push:
     branches:
-      - master
+      - '!*'
     tags:
       - 'v*.*.*'
+  workflow_dispatch:
+
 jobs:
   build-and-push:
     name: Push Docker image to Docker Hub
@@ -15,8 +17,6 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
-        with:
-          platforms: linux/amd64
 
       - name: Set up Docker Buildx
         id: buildx
@@ -28,9 +28,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: kbadk/tplink-smartswitch-webservice
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: kbadk/tplink-smartswitch-webservice:latest
-          platforms:  linux/amd64
+          tags: ${{ steps.meta.outputs.tags }}
+          platforms: linux/amd64
